k8s/model-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-service
  namespace: ingress-nginx  # 修改为 ingress-nginx 命名空间
spec:
  selector:
    app: model
  ports:
    - protocol: TCP
      port: 11434
      targetPort: 11434
